# olli-typed-lambda-calculus

./: .gitignore  README.md  main.otlc  olli-typed-lambda-calculus.cabal  test.otlc
src/: Main.hs  Parser.hs  Types.hs
