name:               olli-typed-lambda-calculus
version:            0.1.0.0

-- synopsis:
-- description:
homepage:           https://github.com/ollimandoliini/olli-typed-lambda-calculus#readme
license:            BSD3
license-file:       LICENSE
author:             Olli Kortelahti
maintainer:         ollikortelahti@gmail.com
copyright:          Olli Kortelahti
category:           Web
build-type:         Simple
cabal-version:      >=1.10
extra-source-files:
  CHANGELOG.md
  README.md

executable olli-typed-lambda-calculus
  hs-source-dirs:   src
  main-is:          Main.hs
  default-language: Haskell2010
  build-depends:
      base        >=4.7 && <5
    , megaparsec

  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wmissing-export-lists
    -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints
    -Wno-unused-top-binds
    -Wno-unrecognised-pragmas
    -Wno-unused-do-bind
